Updated tests to work with new index.

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="cta">
-        <a href="/signin/">{{ "Sign in" | l }}</a>
+        <a href="/signin/" class="sign-in">{{ "Sign in" | l }}</a>
         <a href="">{{ "Create a Firefox Account" | l }}</a>
       </div>
 
