--- a/static/app/index.html
+++ b/static/app/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Find My Device</title>
+    <title>{{ "Find My Device" | l }}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="token" content="{{.Token}}">
     <link href="https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css" rel="stylesheet">
@@ -59,21 +59,21 @@
       <footer id="colophon" class="">
         <nav class="row">
           <div class="col col-1">
-            <h1 class="logo"><a href="/en-US/">{{ "Mozilla" | l }}</a></h1>
-            <p class="license">{{ "Portions of this content are ©1998–2014 by individual mozilla.org contributors. Content available under a <a href='/en-US/foundation/licensing/website-content/'>Creative Commons license</a>." | l }}</p>
+            <h1 class="logo"><a href="http://www.mozilla.org/">{{ "Mozilla" | l }}</a></h1>
+            <p class="license">{{ "Portions of this content are ©1998–2014 by individual mozilla.org contributors. Content available under a <a href='http://www.mozilla.org/foundation/licensing/website-content/'>Creative Commons license</a>." | l }}</p>
           </div>
           <div class="col col-2">
             <ul class="links-join">
-              <li><a href="/en-US/contact/spaces/">{{ "Contact Us" | l }}</a></li>
-              <li class="wrap"><a href="/en-US/about/partnerships/">{{ "Partner with Us" | l }}</a></li>
+              <li><a href="http://www.mozilla.org/contact/spaces/">{{ "Contact Us" | l }}</a></li>
+              <li class="wrap"><a href="http://www.mozilla.org/about/partnerships/">{{ "Partner with Us" | l }}</a></li>
               <li class="clear"><a href="https://sendto.mozilla.org/page/contribute/Give-Now?source=mozillaorg_default_footer" class="donate">{{ "Donate" | l }}</a></li>
               <li class="wrap"><a href="https://affiliates.mozilla.org/">{{ "Firefox Affiliates" | l }}</a></li>
-              <li class="clear"><a href="/en-US/contribute/page/">{{ "Contribute to this page" | l }}</a></li>
+              <li class="clear"><a href="http://www.mozilla.org/contribute/page/">{{ "Contribute to this page" | l }}</a></li>
             </ul>
             <ul class="links-legal">
-              <li><a href="/en-US/privacy/">{{ "Privacy" | l }}</a></li>
-              <li class="wrap"><a href="/en-US/about/legal/">{{ "Legal" | l }}</a></li>
-              <li class="clear"><a href="/en-US/about/legal/fraud-report/">{{ "Report Trademark Abuse" | l }}</a></li>
+              <li><a href="http://www.mozilla.org/privacy/">{{ "Privacy" | l }}</a></li>
+              <li class="wrap"><a href="http://www.mozilla.org/about/legal/">{{ "Legal" | l }}</a></li>
+              <li class="clear"><a href="http://www.mozilla.org/about/legal/fraud-report/">{{ "Report Trademark Abuse" | l }}</a></li>
             </ul>
           </div>
           <div class="col col-3">
@@ -81,60 +81,19 @@
               <li>
                 {{ "Mozilla:" | l }}
                 <ul>
-                  <li>{{ "<a href='https://twitter.com/mozilla'>Twitter<span> (@mozilla)</span></a>" | l }}</li>
-                  <li>{{ "<a href='https://www.facebook.com/mozilla'>Facebook<span> (Mozilla)</span></a>" | l }}</li>
+                  <li><a href="https://twitter.com/mozilla">{{ "Twitter<span> (@mozilla)</span>" | l }}</a></li>
+                  <li><a href="https://www.facebook.com/mozilla">{{ "Facebook<span> (Mozilla)</span>" | l }}</a></li>
                 </ul>
               </li>
               <li>
                 {{ "Firefox:" | l }}
                 <ul>
-                  <li>{{ "<a href='https://twitter.com/firefox'>Twitter<span> (@firefox)</span></a>" | l }}</li>
-                  <li>{{ "<a href='https://www.facebook.com/Firefox'>Facebook<span> (Firefox)</span></a>" | l }}</li>
-                  <li>{{ "<a href='https://www.youtube.com/firefoxchannel'>YouTube<span> (firefoxchannel)</span></a>" | l }}</li>
+                  <li><a href="https://twitter.com/firefox">{{ "Twitter<span> (@firefox)</span>" | l }}</a></li>
+                  <li><a href="https://www.facebook.com/Firefox">{{ "Facebook<span> (Firefox)</span>" | l }}</a></li>
+                  <li><a href="https://www.youtube.com/firefoxchannel">{{ "YouTube<span> (firefoxchannel)</span>" | l }}</a></li>
                 </ul>
               </li>
             </ul>
-            <div class="lang-switcher">
-              <form id="lang_form" method="get" action="#">
-                <label for="language">{{ "Other languages:" | l }}</label>
-                <select id="language" name="lang" dir="ltr">
-                  <option value="bn-BD" lang="bn-BD">বাংলা (বাংলাদেশ)</option>
-                  <option value="ca" lang="ca">Català</option>
-                  <option value="cs" lang="cs">Čeština</option>
-                  <option value="de" lang="de">Deutsch</option>
-                  <option value="el" lang="el">Ελληνικά</option>
-                  <option value="en-US" selected="" lang="en-US">English (US)</option>
-                  <option value="es-AR" lang="es-AR">Español (de Argentina)</option>
-                  <option value="es-CL" lang="es-CL">Español (de Chile)</option>
-                  <option value="es-ES" lang="es-ES">Español (de España)</option>
-                  <option value="es-MX" lang="es-MX">Español (de México)</option>
-                  <option value="et" lang="et">Eesti keel</option>
-                  <option value="fr" lang="fr">Français</option>
-                  <option value="fy-NL" lang="fy-NL">Frysk</option>
-                  <option value="hi-IN" lang="hi-IN">हिन्दी (भारत)</option>
-                  <option value="hr" lang="hr">Hrvatski</option>
-                  <option value="hu" lang="hu">magyar</option>
-                  <option value="it" lang="it">Italiano</option>
-                  <option value="ja" lang="ja">日本語</option>
-                  <option value="ko" lang="ko">한국어</option>
-                  <option value="mk" lang="mk">Македонски</option>
-                  <option value="nl" lang="nl">Nederlands</option>
-                  <option value="pl" lang="pl">Polski</option>
-                  <option value="pt-BR" lang="pt-BR">Português (do&nbsp;Brasil)</option>
-                  <option value="ro" lang="ro">română</option>
-                  <option value="ru" lang="ru">Русский</option>
-                  <option value="sr" lang="sr">Српски</option>
-                  <option value="sv-SE" lang="sv-SE">Svenska</option>
-                  <option value="ta" lang="ta">தமிழ்</option>
-                  <option value="xh" lang="xh">isiXhosa</option>
-                  <option value="zh-CN" lang="zh-CN">中文 (简体)</option>
-                  <option value="zh-TW" lang="zh-TW">正體中文 (繁體)</option>
-                </select>
-                <noscript>
-                  <button type="submit">{{ "Go" | l }}</button>
-                </noscript>
-              </form>
-            </div>
           </div>
         </nav>
       </footer>
