--- a/static/app/index.html
+++ b/static/app/index.html
@@ -40,20 +40,16 @@
               <h3 id="fxos-logo">{{"Firefox OS" | l}}</h3>
               <h1>{{"Find My Device" | l}}</h1>
               <h2>{{"Locate a lost phone, lock it or even erase it remotely." | l}}</h2>
-
-              <p>{{"If you’ve lost your Firefox OS smartphone, Find My Device can help you find it. You can see it on a map, make it play a sound and have it display a message. You can also lock it for safety or delete your personal info completely." | l}}</p>
-              <p>{{"To get started, make sure you have a Firefox Account and Find My Device enabled on your phone." | l}}</p>
-
+              <div id="hero"></div>
               <div id="cta">
                 <a href="/signin/" class="sign-in">{{"Sign in" | l}}</a>
-                <a href="" class="sign-up">{{"Create a Firefox Account &raquo;" | l}}</a>
+                <a href="" class="sign-up">{{"Create a Firefox Account" | l}}</a>
               </div>
-
-              <img src="/images/home/cropped-laptop-phone.png" />
+              <p class="description">{{"If you’ve lost your Firefox OS smartphone, Find My Device can help you find it. You can see it on a map, make it play a sound and have it display a message. You can also lock it for safety or delete your personal info completely." | l}}</p>
+              <p class="get-started">{{"To get started, make sure you have a Firefox Account and Find My Device enabled on your phone." | l}}</p>
             </div>
           </div>
         </section>
-
         <section id="features" class="band">
           <div class="band-inner">
             <div class="feature track">
@@ -74,7 +70,6 @@
             </div>
           </div>
         </section>
-
         <footer class="band">
           <div class="band-inner">
             <div class="column col-1">
