Added server string replacement
* added test comment at bottom of index file.
* added stub server.json
* added Load function for json data
* fixup Localize to return swapped string
* modified unit tests

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -118,4 +118,5 @@
       <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
     {{end}}
   </body>
+  <!-- {{"test" | l }} -->
 </html>
